--- a/PersonalWeb/index.html
+++ b/PersonalWeb/index.html
@@ -99,6 +99,6 @@
     duration: 500,
     easing: 'ease-out',
   })</script>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
