--- a/PersonalWeb/index.html
+++ b/PersonalWeb/index.html
@@ -73,7 +73,7 @@
               <a class="web1" href="koreakids.html"><img src="img/web1Frame.png" alt="" /></a>
             </li>
             <li>
-              <a class="web2" href="#"><img src="img/websiteframe.png" alt="" /></a>
+              <a class="web2" href="https://jiaobanhot.000webhostapp.com/"><img src="img/web2Frame.png" alt="" /></a>
             </li>
             <li>
               <a class="web3" href="#"><img src="img/websiteframe.png" alt="" /></a>
